2nd commit after making clear URL
default routing is not working and page reload is also not working

--- a/DEmo2/DEmo2/Templates/home.html
+++ b/DEmo2/DEmo2/Templates/home.html
@@ -1,28 +1,13 @@
 ﻿<h1>{{message}}</h1>
 
 <div>
-   
-AngularJS
-AngularJS logo.svg
-Developer(s)	Google
-Initial release	October 20, 2010; 8 years ago[1]
-Stable release	
-1.7.7 / February 4, 2019; 41 days ago[2]
-Repository	
-github.com/angular/angular.js
-Edit this at Wikidata
-Written in	Javascript
-Platform	JavaScript engine
-Size	167 kB production
-1.2 MB development
-Type	Web framework
-License	MIT License
-Website	angularjs.org
-AngularJS is a JavaScript-based open-source front-end web framework mainly maintained by Google and by a community of individuals and corporations to address many of the challenges encountered in developing single-page applications. It aims to simplify both the development and the testing of such applications by providing a framework for client-side model–view–controller (MVC) and model–view–viewmodel (MVVM) architectures, along with components commonly used in rich Internet applications. (This flexibility has led to the acronym MVW, which stands for "model-view-whatever" and may also encompass model–view–presenter and model–view–adapter.) In 2014, the original AngularJS team began working on the Angular web framework.
+    PRAGIM Established in 2000 by 3 S/W engineers offers very cost effective training. PRAGIM Speciality in training arena unlike other training institutions
 </div>
-<ul>AngularJS's design goals include:
-    <li>to decouple DOM manipulation from application logic. The difficulty of this is dramatically affected by the way the code is structured.</li>
-    <li>to decouple the client side of an application from the server side. This allows development work to progress in parallel, and allows for reuse of both sides.</li>
-    <li>to provide structure for the journey of building an application: from designing the UI, through writing the business logic, to testing.</li>
-    
+<ul>
+    <li>Training delivered by real time software experts having more than 10 years of experience.</li>
+    <li>Realtime projects discussion relating to the possible interview questions.</li>
+    <li>Trainees can attend training and use lab untill you get a job.</li>
+    <li>Resume preperation and mock up interviews.</li>
+    <li>100% placement assistance.</li>
+    <li>Lab facility.</li>
 </ul>
