--- a/DEmo2/DEmo2/Templates/students.html
+++ b/DEmo2/DEmo2/Templates/students.html
@@ -1,6 +1,8 @@
 ﻿<h1>List of Students</h1>
 <ul>
     <li ng-repeat="student in students">
-        {{student.name}}
+        <a href="students/{{student.id}}">
+            {{student.name}}
+        </a>
     </li>
 </ul>
